# LeaderSpeech

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pending_outbox.csv  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  new-source-recipe.yml
.github/workflows/: ci.yml  claude.yml
R/: combine_to_leaderspeech.R
configs/: audio_config.yml  clean_config.yml  tenure_config.yml  translate_config.yml
data/sources/: additional_master_sources.csv  additional_master_sources.xlsx  master_sources.xlsx  ~$master_sources.xlsx
data/sources/additional_master_sources/: README.md  afg_aop.csv  afg_aop_wayback.csv  alb_kryeministria.csv  alb_president.csv  alb_president_wayback.csv  arm_president.csv  arm_president_wayback.csv  aus_gg.csv  aus_gg_wayback.csv  aut_bundespraesident.csv  aze_president.csv  bgd_bss_president.csv  bgd_bss_president_wayback.csv  bra_biblioteca.csv  bra_biblioteca_wayback.csv  bra_planalto.csv  bra_planalto_old_wayback.csv  bra_planalto_wayback.csv  btn_royalkidu_wayback.csv  cmr_prc.csv  cri_presidencia.csv  cub_presidencia.csv  cyp_presidency.csv  cze_hrad.csv  cze_hrad_wayback.csv  deu_bundespraesident.csv  deu_bundespraesident_wayback.csv  dnk_kongehuset.csv  egy_presidency.csv  egy_sis.csv  esp_casareal.csv  esp_lamoncloa_wayback.csv  est_president.csv  eth_pmo.csv  eth_thepresidency.csv  eth_thepresidency_wayback.csv  fin_presidentti.csv  fji_presidentsoffice.csv  fji_presidentsoffice_wayback.csv  (+90 more)
data/sources/tenure_additions/: afg_islamic_emirate.csv  afg_islamic_emirate_deputies.csv
docs/: agent_task_end_to_end.md  agents.md  audio_transcription.md  backlog.md  cleaning.md  debugging.md  leader_tenure.md  recipes.md  review_workflow.md  translation.md
examples/: wayback_demo.py
leaderspeech/: __init__.py
leaderspeech/clean_structure_metadata/: __init__.py  config.py  extract.py  gate.py  jalali.py  llm.py  merge.py  pipeline.py  probe.py  run.py  store.py  tenure.py
leaderspeech/leader_tenure/: __init__.py  classify.py  config.py  inventory.py  merge.py  run.py  verify.py
leaderspeech/text_scraper/: __init__.py  api.py  block.py  extract.py  fallback_generic.py  feed.py  fetch.py  index.py  paginate.py  pdf.py  probe.py  recipe.py  run.py  wayback.py
leaderspeech/translate/: __init__.py  config.py  pipeline.py  probe.py  run.py  select.py  store.py
leaderspeech/translate/backends/: __init__.py  base.py  google.py  googletrans.py  nllb.py  opusmt.py
leaderspeech/video_audio_scraper/: __init__.py  _cli.py  config.py  download.py  harvest.py  probe.py  recipe.py  run.py
leaderspeech/video_audio_scraper/transcribe/: __init__.py  base.py
leaderspeech/video_audio_scraper/transcribe/backends/: __init__.py  faster_whisper.py  openai_api.py  openai_whisper.py
recipes/: afg_aop_wayback.yml  alb_kryeministria.yml  alb_president.yml  alb_president_wayback.yml  arg_casarosada.yml  arg_casarosada_wayback.yml  arm_president.yml  arm_president_wayback.yml  aus_gg_wayback.yml  aut_bundespraesident.yml  aze_president.yml  bdi_presidence.yml  bel_monarchie.yml  bgd_bangabhaban.yml  bgd_bss_president.yml  bgr_president.yml  blr_president.yml  bra_biblioteca_wayback.yml  bra_planalto.yml  bra_planalto_old_wayback.yml  bra_planalto_wayback.yml  btn_pmo.yml  btn_royalkidu.yml  btn_royalkidu_wayback.yml  chl_presidencia.yml  chl_presidencia_wayback.yml  cmr_prc.yml  col_presidencia.yml  cri_presidencia.yml  cub_presidencia.yml  cyp_presidency.yml  cze_hrad_wayback.yml  deu_bundespraesident.yml  deu_bundespraesident_wayback.yml  dnk_kongehuset.yml  egy_presidency.yml  esp_casareal.yml  esp_lamoncloa_wayback.yml  est_president.yml  eth_pmo.yml  (+84 more)
recipes_audio/: README.md
scripts/: create_issues.sh  create_issues_from_master.py  export_leaderspeech.R  key_fixNames.R  merge_additional_sources.py  seed_master_sources.py
tests/: test_api.py  test_audio_index.py  test_audio_recipe.py  test_audio_run.py  test_block.py  test_clean_extract.py  test_clean_gate.py  test_clean_jalali.py  test_clean_pipeline.py  test_clean_resolve_date.py  test_clean_store.py  test_clean_tenure.py  test_extract.py  test_feed.py  test_fetch.py  test_index.py  test_paginate.py  test_pdf.py  test_probe.py  test_recipe.py  test_run.py  test_tenure_curation.py  test_translate.py  test_translate_backends.py  test_translate_hardening.py  test_translate_select.py  test_wayback.py
