[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaderspeech"
version = "0.1.0"
description = "Tools for scraping, transcribing, cleaning, and structuring speeches by national leaders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dean Schafer" }]
keywords = ["web-scraping", "political-speech", "nlp", "comparative-politics"]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "trafilatura>=1.8",
    "dateparser>=1.2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "openpyxl>=3.1",
    "pycountry>=23.12",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/d-schafer/LeaderSpeech"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.40"]   # for the clean_structure_metadata tool (GPT extraction)

[project.scripts]
leaderspeech-scrape = "leaderspeech.text_scraper.run:main"
leaderspeech-probe = "leaderspeech.text_scraper.probe:main"
leaderspeech-clean = "leaderspeech.clean_structure_metadata.run:main"
leaderspeech-clean-probe = "leaderspeech.clean_structure_metadata.probe:main"
leaderspeech-clean-merge = "leaderspeech.clean_structure_metadata.merge:main"

[tool.setuptools.packages.find]
include = ["leaderspeech*"]
