[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaderspeech"
version = "0.1.0"
description = "Tools for scraping, transcribing, cleaning, and structuring speeches by national leaders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Dean Schafer" }]
keywords = ["web-scraping", "political-speech", "nlp", "comparative-politics"]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "trafilatura>=1.8",
    "dateparser>=1.2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "openpyxl>=3.1",
    "pycountry>=23.12",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/d-schafer/LeaderSpeech"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.40"]              # clean_structure_metadata + leader_tenure (GPT calls)
translate-google = ["deep-translator>=1.11"]            # Google backend (default; online)
translate-hf = ["transformers>=4.40", "torch>=2.0", "sentencepiece>=0.2"]  # OpusMT/NLLB (offline)
audio = ["yt-dlp>=2024.1", "faster-whisper>=1.0"]       # video_audio_scraper (default backend; needs ffmpeg on PATH)
audio-openai-whisper = ["openai-whisper>=20231117"]      # alt local backend (pulls torch)
pdf = ["pdfminer.six>=20221105"]                         # PDF speech pages (content_type: pdf); pypdf is an optional fallback

[project.scripts]
leaderspeech-scrape = "leaderspeech.text_scraper.run:main"
leaderspeech-probe = "leaderspeech.text_scraper.probe:main"
leaderspeech-clean = "leaderspeech.clean_structure_metadata.run:main"
leaderspeech-clean-probe = "leaderspeech.clean_structure_metadata.probe:main"
leaderspeech-clean-merge = "leaderspeech.clean_structure_metadata.merge:main"
leaderspeech-translate = "leaderspeech.translate.run:main"
leaderspeech-translate-probe = "leaderspeech.translate.probe:main"
leaderspeech-tenure = "leaderspeech.leader_tenure.run:main"
leaderspeech-tenure-merge = "leaderspeech.leader_tenure.merge:main"
leaderspeech-transcribe = "leaderspeech.video_audio_scraper.run:main"
leaderspeech-transcribe-harvest = "leaderspeech.video_audio_scraper.harvest:main"
leaderspeech-transcribe-probe = "leaderspeech.video_audio_scraper.probe:main"

[tool.setuptools.packages.find]
include = ["leaderspeech*"]
